--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -8,9 +8,11 @@
     "\n",
     "For å løse oppgaven må vi først finne datasettene med data om landenes innbyggertall og areal.\n",
     "\n",
-    "Deretter ¨kobler vi datasettene. Vi velger fjerne land med missing eller 0 i antall innbyggere eller areal, i tillegg fjerner vi dubletter, selv om det strengt tatt ikke er nødvendig for å finne landene med høyeste og laveste befolkningstetthet.\n",
+    "Deretter kobler vi datasettene. Vi velger fjerne land med missing eller 0 i antall innbyggere eller areal. Vi kunne ha valgt å imputere fra et annet datasett (se logisk imputering under [2. Funksjoner i klargjøring](https://jupyter.prod-bip-app.ssb.no/hub/user-redirect/lab/tree/kurs-ssb-dapla-veileder/notebooks/2.%20Funksjoner%20i%20klargj%C3%B8ring/5.%20Logisk%20imputering.ipynb)).\n",
     "\n",
-    "Når datasettet er slått sammen, lager vi variabelen <code>befolkningstetthet</code> og finner så høyeste og laveste verdi."
+    "I tillegg fjerner vi dubletter og velger ut hvilke observasjoner vi skal beholde.\n",
+    "\n",
+    "Når datasettet er slått sammen, lager vi variabelen <code>befolkningstetthet</code>, og finner så høyeste og laveste verdi for denne variabelen."
    ]
   },
   {
@@ -86,7 +88,7 @@
    "metadata": {},
    "source": [
     "#### 1.2 Fjerne observasjoner som er 0\n",
-    "Finn og fjerne observasjoner som er 0 for variablene <code>Innbyggerantall</code> og <code>Areal</code>"
+    "Fjerne observasjoner som er 0 for variablene <code>Innbyggerantall</code> (Dvs. Færøyene som vi ser i resultatet over)"
    ]
   },
   {
@@ -95,6 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filtrerer de observasjonenen hvor Innbyggerantall>0\n",
     "df_innbyggerantall_2020 = df_innbyggerantall_2020.filter(df_innbyggerantall_2020.Innbyggerantall>0)\n",
     "df_innbyggerantall_2020.show(50, False)"
    ]
@@ -103,7 +106,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.3 Fjerne dubletter"
+    "#### 1.3 Fjerne dubletter\n",
+    "Vi ønsker å beholde de dublettene som har høyste verdi for Innbyggerantall og laveste verdi for areal. Det kan vi gjøre ved først å sortere datasettet."
    ]
   },
   {
@@ -112,25 +116,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å sjekke og evt. fjerne dubletter\n",
-    "\n",
     "#Sorterer etter land og innbyggerantall og lister ut den sorterte dataframen\n",
-    "print(\"*********************************** INNBYGGERANTALL SORTERT ETTER LAND OG INNBYGGERANTALL ***********************************\")\n",
-    "\n",
     "df_innbyggerantall_2020_sort = df_innbyggerantall_2020.orderBy(['Land','Innbyggerantall'], ascending=[1, 0])\n",
-    "df_innbyggerantall_2020_sort.show(50,False)\n",
-    "\n",
+    "print(\"*********************************** INNBYGGERANTALL SORTERT ETTER LAND OG INNBYGGERANTALL ***********************************\")\n",
+    "df_innbyggerantall_2020_sort.show(50,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Tar ut oversikt over de radene med likt \"land\" som forekommer flere enn en gang i dataframen, og sånn sett utgjør den samlede mengden av duplikater\n",
     "df_land_dub_alle  = df_innbyggerantall_2020_sort.join(df_innbyggerantall_2020_sort.groupBy('Land')\\\n",
     "          .count().where('count = 1').drop('count'),\n",
     "          on=['Land'],\n",
     "          how='left_anti')\n",
     "print(\"*********************************** OVERSIKT OVER DUPLIKATER ***********************************\")\n",
-    "df_land_dub_alle.show()  \n",
-    "\n",
-    "print(\"*********************************** INNBYGGERANTALL UTEN DUBLIKATER. HØYESTE INNBYGGERANTALL ER BEHOLDT ***********************************\")\n",
-    "df_innbyggerantall_udub= df_innbyggerantall_2020_sort.drop_duplicates(subset=['Land'])\n",
-    "df_innbyggerantall_udub.show(50,False)\n"
+    "df_land_dub_alle.show()"
    ]
   },
   {
@@ -139,33 +143,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å sjekke og evt. fjerne dubletter\n",
-    "\n",
+    "# Fjerner duplikater (flere observasjoner på land)\n",
+    "print(\"*********************************** INNBYGGERANTALL UTEN DUBLIKATER. HØYESTE INNBYGGERANTALL ER BEHOLDT ***********************************\")\n",
+    "df_innbyggerantall_udub= df_innbyggerantall_2020_sort.drop_duplicates(subset=['Land'])\n",
+    "df_innbyggerantall_udub.show(50,False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Sorterer etter land og areal og lister ut den sorterte dataframen\n",
     "print(\"*********************************** AREALDATASETT SORTERT ETTER LAND OG AREAL ***********************************\")\n",
     "\n",
     "df_areal_sort = df_areal.orderBy(['Land','Areal'], ascending=[1, 1])\n",
     "df_areal_sort.show(50,False)\n",
     "\n",
-    "\n",
     "#Tar ut oversikt over de radene med likt \"land\" som forekommer flere enn en gang i dataframen, og sånn sett utgjør den samlede mengden av duplikater\n",
     "df_areal_dub_alle  = df_areal_sort.join(df_areal_sort.groupBy('Land')\\\n",
     "          .count().where('count = 1').drop('count'),\n",
     "          on=['Land'],\n",
     "          how='left_anti')\n",
+    "\n",
     "print(\"*********************************** OVERSIKT OVER DUPLIKATER ***********************************\")\n",
     "df_areal_dub_alle.show()  \n",
     "\n",
     "print(\"*********************************** AREALDATSETTET UTEN DUBLETTER: MINSTE AREAL BEHOLDT ***********************************\")\n",
     "df_areal_udub= df_areal_sort.drop_duplicates(subset=['Land'])\n",
-    "df_areal_udub.show(50,False)\n"
+    "df_areal_udub.show(50,False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.3 Koble datasett"
+    "#### 1.4 Koble datasett\n",
+    "Vi bruker koblingsmetoden 'inner' fordi vi ikke er interessert i forekomster som har missing i enten Innbyggerantall eller Areal."
    ]
   },
   {
@@ -174,8 +189,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n",
-    "df_areal_innbyggerantall = df_areal_udub.join(df_innbyggere_udub, 'Land', 'inner')\n",
+    "# Koble sammen datasettene (innbyggerantall og areal). .\n",
+    "df_areal_innbyggerantall = df_areal_udub.join(df_innbyggerantall_udub, 'Land', 'inner')\n",
+    "\n",
     "print(\"*********************************** SAMMENKOBLET DATASETT ***********************************\")\n",
     "df_areal_innbyggerantall.show(50,False)"
    ]
@@ -184,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.4 Lage en ny variabel"
+    "#### 1.5 Lage en ny variabel"
    ]
   },
   {
@@ -193,8 +209,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å lage en ny variabel for befolkningstetthet\n",
-    "df_areal_innbyggerantall = df_areal_innbyggerantall.withColumn('Befolkningstetthet',df_areal_innbyggerantall['Innbyggerantall']/df_areal_innbyggerantall['Areal'])\n",
+    "# Ny variabel for befolkningstetthet\n",
+    "df_areal_innbyggerantall = df_areal_innbyggerantall.withColumn('Befolkningstetthet',(df_areal_innbyggerantall['Innbyggerantall']/df_areal_innbyggerantall['Areal']).cast(IntegerType()))\n",
+    "\n",
     "print(\"*********************************** SAMMENKOBLET DATASETT MED NY VARIABEL ***********************************\")\n",
     "df_areal_innbyggerantall.show(50,False)"
    ]
@@ -212,9 +229,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skrive kode for å finne maks og min av befokningstetthet\n",
-    "from pyspark.sql.functions import mean, min, max\n",
-    "result = df_areal_innbyggerantall.select([min(\"Befolkningstetthet\"), max(\"Befolkningstetthet\")])\n",
+    "# Finne maks og min av befokningstetthet\n",
+    "result = df_areal_innbyggerantall.select([F.min(\"Befolkningstetthet\"), F.max(\"Befolkningstetthet\")])\n",
+    "\n",
     "print(\"*********************************** MINIMUM OG MAKSIMUM AV VARIABELEN BEFOLKNINGSTETTHET ***********************************\")\n",
     "result.show()\n"
    ]
