--- a/notebooks/1. Introduksjon/1. Om veilederen.ipynb
+++ b/notebooks/1. Introduksjon/1. Om veilederen.ipynb
@@ -4,42 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Innledning</h2>\n",
-    "<font size=2>SSB utvikler løsninger for modernisert statistikkproduksjon. Denne veilederen har til hensikt å hjelpe nye og erfarene brukere i å bruke produksjonsystemet for å <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115278064\" target=\"planlegge \">planlegge</a>, <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115281281\" target=\"bygge\">bygge og <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=117149061\" target=\"Fase 5&6: Klargjøre og analysere\">produsere</a> statistikk. Den er skrevet i kjørende kode. \n",
+    "## Innledning\n",
+    "SSB utvikler løsninger for modernisert statistikkproduksjon. Denne veilederen har til hensikt å hjelpe nye og erfarene brukere i å bruke dataplattformen Dapla for å <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115278064\" target=\"planlegge \">planlegge</a>, <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=115281281\" target=\"bygge\">bygge</a> og <a href=\"https://wiki.ssb.no/pages/viewpage.action?pageId=117149061\" target=\"Fase 5&6: Klargjøre og analysere\">produsere</a> statistikk. Den er skrevet i kjørende kode. \n",
     "\n",
     "Veledningsteksten er er skrevet i <a href=\"https://daringfireball.net/projects/markdown/\" target=\"Markdown Project Page\">Markdown</a>, mens eksemplene er skrevet i <a href=\"https://spark.apache.org/docs/latest/api/python/index.html\" target=\"Spark Python API Docs\">Pyspark</a>. Jupiter støtter også andre språk. Pyspark <i>snakker med</i> og anvender <a href=\"http://spark.apache.org/sql/\" target=\"Spark SQL & Dataframes | Apache\">Sparks SQL</a>. \n",
     "\n",
     "Sparks SQL er en modul i Spark som håndterer strukturerte data. Og når vi først er inne på det, så er Spark omgivelsen, eller infrastrukturen, som anvendes i Byråets dataplattform for å prosesserer store datamengder.\n",
     "\n",
-    "Utviklingen av veilederen er behovsstyrt og må forholde seg til et produksjonssystem i utvikling.\n",
-    "</font>"
+    "Utviklingen av veilederen er behovsstyrt og må forholde seg til et produksjonssystem i utvikling."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Produksjonssysten for å planlegge, bygge og produserer statistikk\n",
-    "(Kort beskrive produksjonssystemet)"
+    "### Bearbeide og presentere data på dataplattformen\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Hva er pyspark\n",
-    "\"PySpark is the collaboration of Apache Spark and Python. Apache Spark is an open-source cluster-computing framework, built around speed, ease of use, and streaming analytics whereas Python is a general-purpose, high-level programming language\".\n",
-    "..."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "### Pyspark biblioteker\n",
-    "<font size=2>Oppgave: forklare hva og hvordan bruke biblioteker i pyspark, peke til hvor bibliotekene er beskrevet appache.spark....\n",
-    "</font>"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
