--- a/notebooks/1. Introduksjon/_import_dapla.ipynb
+++ b/notebooks/1. Introduksjon/_import_dapla.ipynb
@@ -1,19 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Statistikkfunksjoner i pyspark\n",
-    "<font size=2>I dette notatet gis det eksempler på nyttige funksjoner kodet i Pyspark og brukt i klargjøringen av Skattestatistikk for personer.\n",
-    "\n",
-    "...\n",
-    "</font>"
+    "import dapla as dp\n",
+    "dir(dp)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp.show(\"/felles/veiledning/pyspark/eksempler/areal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp.details(\"/felles/veiledning/pyspark/eksempler/areal\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
