--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "For å løse oppgaven må vi først finne datasettene med data om landenes innbyggertall og areal.\n",
     "\n",
-    "Deretter kobler vi datasettene. Vi velger fjerne land med missing eller 0 i antall innbyggere eller areal. Vi kunne ha valgt å imputere fra et annet datasett (se logisk imputering under [2. Funksjoner i klargjøring](https://jupyter.prod-bip-app.ssb.no/hub/user-redirect/lab/tree/kurs-ssb-dapla-veileder/notebooks/2.%20Funksjoner%20i%20klargj%C3%B8ring/5.%20Logisk%20imputering.ipynb)).\n",
+    "Deretter kobler vi datasettene. Vi velger å fjerne land med missing eller 0 i antall innbyggere eller areal. Alternativt kunne vi ha valgt å imputere fra et annet datasett (se logisk imputering under [2. Funksjoner i klargjøring](https://jupyter.prod-bip-app.ssb.no/hub/user-redirect/lab/tree/kurs-ssb-dapla-veileder/notebooks/2.%20Funksjoner%20i%20klargj%C3%B8ring/5.%20Logisk%20imputering.ipynb)).\n",
     "\n",
-    "I tillegg fjerner vi dubletter og velger ut hvilke observasjoner vi skal beholde.\n",
+    "I tillegg fjerner vi dubletter og velger ut hvilken observasjon vi skal beholde.\n",
     "\n",
     "Når datasettet er slått sammen, lager vi variabelen <code>befolkningstetthet</code>, og finner så høyeste og laveste verdi for denne variabelen."
    ]
@@ -28,8 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame\n",
-    "from pyspark.sql.types import *\n",
+    "from pyspark.sql.types import IntegerType\n",
     "import pyspark.sql.functions as F"
    ]
   },
@@ -246,9 +245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark (local)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
