Laste inn biblioteker
Laster nå bare inn de bibliotekene notebook-dokumentene trenger.

--- a/notebooks/1. Introduksjon/3. Datasett og felles datalager.ipynb
+++ b/notebooks/1. Introduksjon/3. Datasett og felles datalager.ipynb
@@ -31,9 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame\n",
-    "from pyspark.sql.types import *\n",
-    "import pyspark.sql.functions as F"
+    "from pyspark.sql.types import StructType, StructField"
    ]
   },
   {
