--- a/notebooks/1. Introduksjon/4. Lese eksempeldata fra dataplattformen.ipynb
+++ b/notebooks/1. Introduksjon/4. Lese eksempeldata fra dataplattformen.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame"
+    "# Det er ikke behov for å importere biblioteker. Spark-objektet er allerede instansiert i pyspark-kjernen."
    ]
   },
   {
