--- a/notebooks/4. Oppgaver/Oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Oppgave 1.ipynb
@@ -9,12 +9,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Laster inn bibliotek:"
+    "#### Laster inn bibliotek:"
    ]
   },
   {
@@ -23,16 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame\n",
-    "from pyspark.sql.types import *\n",
-    "import pyspark.sql.functions as F"
+    "# importerer bare det som trengs fra bibliotekene\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.1 Finne og leses inn datasett"
+    "#### 1.1  Finne datasett"
    ]
   },
   {
@@ -41,14 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og lese inn datasettene om innbyggerantall 2020 og areal\n"
+    "# skriv koden for å finne datasettene om innbyggerantall 2020 og areal\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.2 Fjerne dubletter"
+    "#### 1.2 Lese inn datasettene"
    ]
   },
   {
@@ -57,14 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å sjekke og evt. fjerne dubletter\n"
+    "# skriv koden for å finne og lese inn datasettene om innbyggerantall 2020 og areal\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.3  Koble datasett"
+    "#### 1.3 Fjerne observasjoner som er 0, missing eller negative"
    ]
   },
   {
@@ -73,14 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n"
+    "# skriv kode for å finne og evt. fjene observasjoner som er 0, missing eller negative\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.4 Lage en ny variabel"
+    "#### 1.4 Fjerne dubletter"
    ]
   },
   {
@@ -89,14 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skriv kode for å lage en ny variabel for befolkningstetthet\n"
+    "# skriv kode for å sjekke og evt. fjerne dubletter\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1.5 Finne maks og min"
+    "#### 1.5  Koble datasett"
    ]
   },
   {
@@ -105,7 +101,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Skrive kode for å finne maks og min av befokningstetthet\n"
+    "# skriv kode for å koble sammen datasettene (innbyggerantall og areal)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.6 Lage en ny variabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skriv kode for å lage en ny variabel for befolkningstetthet\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.7 Finne maks og min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skrive kode for å finne maks og min av befokningstetthet\n"
    ]
   },
   {
