--- a/notebooks/4. Oppgaver/Oppgave 2.ipynb
+++ b/notebooks/4. Oppgaver/Oppgave 2.ipynb
@@ -9,12 +9,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Laster inn bibliotek:"
+    "#### Laster inn bibliotek:"
    ]
   },
   {
@@ -23,16 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import DataFrame\n",
-    "from pyspark.sql.types import *\n",
-    "import pyspark.sql.functions as F"
+    "# importerer bare det som trengs fra bibliotekene\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.1 Finne og leses inn datasett"
+    "#### 2.1 Finne datasettene"
    ]
   },
   {
@@ -41,14 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og lese inn datasettene om innbyggerantall og bnp\n"
+    "# skriv koden for å finne datasettene om innbyggerantall og bnp\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2 Fjerne dubletter"
+    "#### 2.2 Les inn datasettene"
    ]
   },
   {
@@ -57,14 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne og eventuelt fjerne dubletter\n"
+    "# skriv koden for å lese inn datasettene om innbyggerantall og bnp\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.3 Koble datasett"
+    "#### 2.3 Fjerne observasjoner som er 0, missing eller negative"
    ]
   },
   {
@@ -73,14 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å koble datasettene\n"
+    "# skriv kode for å finne og evt. fjene observasjoner som er 0, missing eller negative\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.4 Lage en ny variabel"
+    "#### 2.4 Fjerne dubletter"
    ]
   },
   {
@@ -89,14 +85,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å lage ny variabel (BNP/innbyggerantall)\n"
+    "# skriv koden for å finne og eventuelt fjerne dubletter\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.5 Finne min og maks"
+    "#### 2.5 Koble datasett"
    ]
   },
   {
@@ -105,7 +101,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#skriv koden for å finne min og maks på nye variabelen\n"
+    "# skriv koden for å koble datasettene\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.6 Lage en ny variabel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skriv koden for å lage ny variabel (BNP/innbyggerantall)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.7 Finne min og maks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# skriv koden for å finne min og maks på nye variabelen\n"
    ]
   },
   {
