--- a/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
+++ b/notebooks/4. Oppgaver/Løsning oppgave 1.ipynb
@@ -245,9 +245,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Pyspark (local)",
    "language": "python",
-   "name": "python3"
+   "name": "pyspark_local"
   },
   "language_info": {
    "codemirror_mode": {
