Added documentation for dapla-python package

--- a/notebooks/1. Introduksjon/5. Tips og triks.ipynb
+++ b/notebooks/1. Introduksjon/5. Tips og triks.ipynb
@@ -8,6 +8,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ta tiden på en kjøring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "df_areal = spark.read.path(\"/felles/veiledning/pyspark/eksempler/areal\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Øke kolonnebredden til en pandas dataframe:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.set_option('max_colwidth',100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lete etter data på dataplattformen (alternativ til å bruke spark):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dapla as dp\n",
+    "dp.show('/kilde/ske')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Vise detaljer om hvilke filer som er knyttet til et datasett:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dapla as dp\n",
+    "dp.details('/felles/veiledning/pyspark/eksempler/areal')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
