--- a/notebooks/1. Introduksjon/4. Dapla python pakke.ipynb
+++ b/notebooks/1. Introduksjon/4. Dapla python pakke.ipynb
@@ -91,13 +91,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Og til å vise innholdet (filene) i en bøtte"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Og til å vise innholde"
+    "dp.details('/felles/python/purchases')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
