Daplas python pakke
Endret filstiene så eksemplene fungerer.
Slettet også et påbegynt notebook dokument om dapla pakken/biblioteket

--- a/notebooks/1. Introduksjon/4. Dapla python pakke.ipynb
+++ b/notebooks/1. Introduksjon/4. Dapla python pakke.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dapla har utviklet en egen Python pakke for å kunne kommunisere direkte med Dapla-tjenester og jobbe med datasett uten å bruke spark. Denne pakken inneholder for tiden følgende funksjonalitet:\n",
-    "\n",
+    "#### Daplas Python pakke\n",
+    "Dapla har utviklet en egen Python pakke for å kunne kommunisere direkte med Dapla-tjenester og jobbe med datasett uten å bruke spark. Denne pakken inneholder for tiden følgende funksjonalitet:\n",
     "- Lese datasett fra Google Cloud Storage (GCS) inn som en Pandas dataframe.\n",
     "- Skrive innholdet i en Pandas dataframe til en \"bøtte\" i GCS\n",
     "- Vise innhold i en GCS \"bøtte\"\n",
@@ -71,7 +71,7 @@
     "import dapla as dp\n",
     "\n",
     "# Read path into pandas dataframe \n",
-    "dp.read_pandas('/felles/python/purchases')"
+    "dp.read_pandas('/felles/veiledning/python/eksempler/purchases')"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.show('/felles/python')"
+    "dp.show('/felles/veiledning/python/eksempler')"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp.details('/felles/python/purchases')"
+    "dp.details('/felles/veiledning/python/eksempler/purchases')"
    ]
   },
   {
