--- a/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
+++ b/notebooks/1. Introduksjon/6. Dokumentasjon av datasett.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "ds.doc = {\n",
     "  \"logical-record-root\" : {\n",
-    "    \"name\" : \"spark_schema\",\n",
+    "    \"name\" : \"Areal\",\n",
     "    \"instanceVariables\" : [ {\n",
     "      \"name\" : \"Land\",\n",
     "      \"description\" : \"Land\"\n",
